--- a/index.html
+++ b/index.html
@@ -54,33 +54,33 @@ And I'm good at tricking myself into getting stuff done.<br>
 <div>
 <h2>2020</h2>
   
-<p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns</p>
-<p>2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang</p>
-<p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen</p>
+<p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
+<p>2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang <span>&#11089;</span><span>&#11089;</span></p>
+<p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
 <p>4. Heart of a Dog, by Mikhail Bulgakov
-<p>5. Tonight I'm Someone Else, by Chelsea Hodson</p>
-<p>6. The Bell Jar, by Sylvia Plath
-<p>7. Uncle Tom's Cabin, by Harriett Beecher Stowe</p>
+<p>5. Tonight I'm Someone Else, by Chelsea Hodson <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
+<p>6. The Bell Jar, by Sylvia Plath <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span> </p>
+<p>7. Uncle Tom's Cabin, by Harriett Beecher Stowe <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
 <p>8. Whistleblower, by Susan Fowler <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
-<p>9. Atomic Habits, by James Still</p>
-<p>10. Say Nothing, by  Patrick Radden Keefe</p>
-<p>11. Uncanny Valley, by Anna Wiener</p>
-<p>12. Station Eleven, by Emily St. John Mandel </p>
-<p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith </p>  
-<p>14. Calypso, by David Sedaris </p>  
+<p>9. Atomic Habits, by James Still <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
+<p>10. Say Nothing, by  Patrick Radden Keefe <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></span><span>&#11242;</span></p>
+<p>11. Uncanny Valley, by Anna Wiener <span>&#11089;</span><span>&#11089;</span></p>
+<p>12. Station Eleven, by Emily St. John Mandel <span>&#11089;</span><span>&#11089;</span></p>
+<p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>  
+<p>14. Calypso, by David Sedaris <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>  
 <p style="color:green;">15. The First Bad Man, By Miranda July <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
 <p>16. Severance, by Ling Ma <span>&#11089;</span><span>&#11089;</span></p>
 
   </div>
   <h2>2019</h2>
 
-<p>1. <a href="https://www.amazon.com/gp/product/1603580557/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1603580557&linkId=64401f30da28245ef42d2d5a96c14bc3">Thinking in Systems: A Primer</a>, by Donella H. Meadows</p>
-<p>2. <a href="https://www.amazon.com/gp/product/0399588191/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0399588191&linkId=45ffac5a8abc267cb81de6ac9991619c">Born a Crime</a>, by Trever Noah</p>
-<p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China</a>, by Evan Osnos</p>
-<p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson</p>
-<p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin</p>
-<p style="color:green;">6. Educated, by Tara Westover</p>
-<p style="color:green;"> 7. The Last Kingdom, by Bernard Cornwell</p>
+<p>1. <a href="https://www.amazon.com/gp/product/1603580557/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1603580557&linkId=64401f30da28245ef42d2d5a96c14bc3">Thinking in Systems: A Primer</a>, by Donella H. Meadows <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
+<p>2. <a href="https://www.amazon.com/gp/product/0399588191/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0399588191&linkId=45ffac5a8abc267cb81de6ac9991619c">Born a Crime</a>, by Trever Noah <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
+<p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China </a>, by Evan Osnos <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
+<p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
+<p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
+<p style="color:green;">6. Educated, by Tara Westover <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
+<p style="color:green;"> 7. The Last Kingdom, by Bernard Cornwell <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
   </div>
 <div data-block-type="47">
 <div><hr /></div>
