--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@ And I'm good at tricking myself into getting stuff done.<br>
 <div>
 <h2>2020</h2>
   
-<p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
-<p>2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang <span>&#11089;</span><span>&#11089;</span></p>
-<p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
-<p>4. Heart of a Dog, by Mikhail Bulgakov
-<p>5. Tonight I'm Someone Else, by Chelsea Hodson <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
-<p>6. The Bell Jar, by Sylvia Plath <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span> </p>
-<p>7. Uncle Tom's Cabin, by Harriett Beecher Stowe <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
-<p>8. Whistleblower, by Susan Fowler <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
-<p>9. Atomic Habits, by James Still <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
-<p>10. Say Nothing, by  Patrick Radden Keefe <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></span><span>&#11242;</span></p>
-<p>11. Uncanny Valley, by Anna Wiener <span>&#11089;</span><span>&#11089;</span></p>
-<p>12. Station Eleven, by Emily St. John Mandel <span>&#11089;</span><span>&#11089;</span></p>
-<p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>  
+<p>1. <a href="https://www.amazon.com/gp/product/1644450003/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1644450003&linkId=fd31d4136770572b3c31f92ec1fe9a9a" target="_blank">Milkman</a>, by Anna Burns ★★★</p>
+<p>2. <a href=https://www.amazon.com/gp/product/1101906111/ref=as_li_tl?ie=UTF8&tag=johannafulghu-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1101906111&linkId=b01211fc3d7e1c33dbda12bd006319a4 target="_blank">The Vegetarian</a>, by Han Kang  ★★1/2</p>
+<p>3. <a href="https://www.amazon.com/gp/product/0802124941/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0802124941&linkId=31dca720cb1c7fca816641bd6a790910">The Sympathizer</a>, by Viet Thanh Nguyen ★★★</p>
+<p>4. Heart of a Dog, by Mikhail Bulgakov ★★1/2
+<p>5. Tonight I'm Someone Else, by Chelsea Hodson  ★★★1/2 </p>
+<p>6. The Bell Jar, by Sylvia Plath ★★★1/2</p>
+<p>7. Uncle Tom's Cabin, by Harriett Beecher Stowe ★★★1/2</p>
+<p>8. Whistleblower, by Susan Fowler ★★★</p>
+<p>9. Atomic Habits, by James Still ★★★</p>
+<p>10. Say Nothing, by  Patrick Radden Keefe ★★★1/2</p>
+<p>11. Uncanny Valley, by Anna Wiener ★★</p>
+<p>12. Station Eleven, by Emily St. John Mandel ★★</p>
+<p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith ★★★</p>  
 <p>14. Calypso, by David Sedaris <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>  
-<p style="color:green;">15. The First Bad Man, By Miranda July <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p>
-<p>16. Severance, by Ling Ma <span>&#11089;</span><span>&#11089;</span></p>
+<p style="color:green;">15. The First Bad Man, By Miranda July ★★★★</p>
+<p>16. Severance, by Ling Ma ★★</p>
 
   </div>
   <h2>2019</h2>
