--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@ And I'm good at tricking myself into getting stuff done.<br>
 <p>11. Uncanny Valley, by Anna Wiener ★★</p>
 <p>12. Station Eleven, by Emily St. John Mandel ★★</p>
 <p>13. Plotting and Writing Suspense Fiction, by Patricia Highsmith ★★★</p>  
-<p>14. Calypso, by David Sedaris <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>  
+<p>14. Calypso, by David Sedaris ★★★1/2<</p>  
 <p style="color:green;">15. The First Bad Man, By Miranda July ★★★★</p>
 <p>16. Severance, by Ling Ma ★★</p>
 
   </div>
   <h2>2019</h2>
 
-<p>1. <a href="https://www.amazon.com/gp/product/1603580557/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1603580557&linkId=64401f30da28245ef42d2d5a96c14bc3">Thinking in Systems: A Primer</a>, by Donella H. Meadows <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
-<p>2. <a href="https://www.amazon.com/gp/product/0399588191/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0399588191&linkId=45ffac5a8abc267cb81de6ac9991619c">Born a Crime</a>, by Trever Noah <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
-<p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China </a>, by Evan Osnos <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
-<p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11242;</span></p>
-<p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin <span>&#11089;</span><span>&#11089;</span><span>&#11089;</span><span>&#11089;</span></p></p>
+<p>1. <a href="https://www.amazon.com/gp/product/1603580557/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1603580557&linkId=64401f30da28245ef42d2d5a96c14bc3">Thinking in Systems: A Primer</a>, by Donella H. Meadows ★★★1/2</p>
+<p>2. <a href="https://www.amazon.com/gp/product/0399588191/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0399588191&linkId=45ffac5a8abc267cb81de6ac9991619c">Born a Crime</a>, by Trever Noah ★★★1/2</p>
+<p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China </a>, by Evan Osnos ★★★1/2</p>
+<p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson ★★★1/2</p>
+<p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin ★★★★ </p>
 <p style="color:green;">6. Educated, by Tara Westover ★★★★</p></p>
 <p style="color:green;"> 7. The Last Kingdom, by Bernard Cornwell ★★★★</p></p>
   </div>
