--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ And I'm good at tricking myself into getting stuff done.<br>
   </div>
   <h2>2019</h2>
 
-<p>1. <a href="https://www.amazon.com/gp/product/1603580557/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1603580557&linkId=64401f30da28245ef42d2d5a96c14bc3">Thinking in Systems: A Primer</a>, by Donella H. Meadows ★★★1/2</p>
+<p>1. <a href="https://www.amazon.com/gp/product/1603580557/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1603580557&linkId=64401f30da28245ef42d2d5a96c14bc3">Thinking in Systems: A Primer</a>, by Donella H. Meadows ★★★★</p>
 <p>2. <a href="https://www.amazon.com/gp/product/0399588191/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=0399588191&linkId=45ffac5a8abc267cb81de6ac9991619c">Born a Crime</a>, by Trever Noah ★★★1/2</p>
-<p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China </a>, by Evan Osnos ★★★1/2</p>
+<p>3. <a target="_blank" href="https://www.amazon.com/gp/product/0374535272/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0374535272&linkCode=as2&tag=johannafulghu-20&linkId=07b0a659a66aae25a4a153a350b88180">Age of Ambition: Chasing Fortune, Truth, and Faith in the New China </a>, by Evan Osnos ★★★★</p>
 <p>4. <a target="_blank" href="https://www.amazon.com/gp/product/1732265186/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1732265186&linkCode=as2&tag=johannafulghu-20&linkId=908dde9ca9ade2ac616ff2929449a2fa">An Elegant Puzzle: Systems of Engineering Management</a>, by Will Larson ★★★1/2</p>
 <p>5. <a target="_blank" href="https://www.amazon.com/gp/product/1590179269/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=johannafulghu-20&creative=9325&linkCode=as2&creativeASIN=1590179269&linkId=cdb885a7a2ce9b1ff0099f757accbe8d">The Cowshed: Memories of the Chinese Cultural Revolution</a>, by Ji Xianlin ★★★★ </p>
 <p style="color:green;">6. Educated, by Tara Westover ★★★★</p></p>
