--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <p>19. The Toyota Way, by Jeffrey Liker ★★★</p>
 <p>20. Circe, by Madeline Miller ★★★★</p>
 <p>21. Florida, by Lauren Groff ★★★★</p>
+<p>22. The Obstacle is the Way, by Ryan Holiday ★★★</p>
   </div>
   <h2>2019</h2>
 
