--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 <p>20. Circe, by Madeline Miller ★★★★</p>
 <p>21. Florida, by Lauren Groff ★★★★</p>
 <p>22. The Obstacle is the Way, by Ryan Holiday ★★★</p>
+<p>23. How to Fail at Almost Everything and Still Win Big, by Scott Adams ★★★1/2</p>
   </div>
   <h2>2019</h2>
 
