--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 <p>21. Florida, by Lauren Groff ★★★★</p>
 <p>22. The Obstacle is the Way, by Ryan Holiday ★★★</p>
 <p>23. How to Fail at Almost Everything and Still Win Big, by Scott Adams ★★★1/2</p>
+<p>24. Girl, Decoded by Rana el Kaliouby ★★★1/2</p>
+<p>25. The Enchiridion, by Epictetus ★★★★</p>
   </div>
   <h2>2019</h2>
 
